# open-agent-kit

./: .constitution.md  .cspell.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: README.md  pr-check.yml  release.yml
agents/claude/: manifest.yaml
agents/codex/: manifest.yaml
agents/copilot/: manifest.yaml
agents/cursor/: manifest.yaml
agents/gemini/: manifest.yaml
agents/windsurf/: manifest.yaml
docs/: README.md  architecture.md  issue-workflow.md
docs/development/: decision-framework-architecture.md  features.md  migrations.md  skills-implementation-plan.md
docs/features/: constitution.md  issues.md  rfc.md
features/constitution/: manifest.yaml
features/constitution/commands/: oak.constitution-amend.md  oak.constitution-create.md  oak.constitution-validate.md
features/constitution/templates/: decision_points.yaml  example-decisions-comprehensive.json  example-decisions-minimal.json  example-decisions-vertical-slice.json  example-decisions.json
features/core/: manifest.yaml
features/issues/: manifest.yaml
features/issues/commands/: oak.issue-implement.md  oak.issue-plan.md  oak.issue-validate.md
features/plan/: manifest.yaml
features/plan/commands/: oak.plan-create.md  oak.plan-export.md  oak.plan-implement.md  oak.plan-issue.md  oak.plan-research.md  oak.plan-tasks.md  oak.plan-validate.md
features/rfc/: manifest.yaml
features/rfc/commands/: oak.rfc-create.md  oak.rfc-list.md  oak.rfc-validate.md
features/rfc/templates/: architecture.md  engineering.md  feature.md  process.md
scripts/: get-version.sh
src/open_agent_kit/: __init__.py  cli.py  constants.py
src/open_agent_kit/commands/: config_cmd.py  constitution_cmd.py  feature_cmd.py  init_cmd.py  plan_cmd.py  remove_cmd.py  rfc_cmd.py  skill_cmd.py  upgrade_cmd.py
src/open_agent_kit/config/: __init__.py  messages.py  paths.py  settings.py
src/open_agent_kit/models/: __init__.py  agent_manifest.py  config.py  enums.py  exceptions.py  feature.py  issue.py  plan.py  rfc.py  skill.py  state.py
src/open_agent_kit/pipeline/: __init__.py  context.py  executor.py  (+2 more)
tests/: test_agent_file_service.py  test_agent_service.py  test_cli_constitution.py  test_cli_feature.py  test_cli_init.py  test_cli_plan.py  test_console.py  test_constitution_service.py  test_copilot_migration.py  test_decision_context.py  test_decision_schema_sync.py  test_feature_service.py  test_ide_settings_service.py  test_interactive.py  test_issue_service_comprehensive.py  test_pipeline_context.py  test_pipeline_executor.py  test_pipeline_stages.py  test_plan_models.py  test_plan_service.py  test_rfc_service.py  test_skill_model.py  test_skill_service.py  test_template_service.py  test_upgrade.py  test_validation_service.py
(+47 files in other folders)
